--- a/gemini_RAG_chatbot.ipynb
+++ b/gemini_RAG_chatbot.ipynb
@@ -1986,6 +1986,15 @@
       "execution_count": null,
       "outputs": []
     },
+     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Now observing results through some sample questions ***"
+      ],
+      "metadata": {
+        "id": "DHpX7l8bnv-I"
+      }
+    }
     {
       "cell_type": "code",
       "source": [
